force-app/main/default/objects/Metadata_Object__c/Metadata_Object__c.object-meta.xml
<CustomObject>
    <description>Represents Metadata Objects like Validation Rules, Workflow Rules, Process Builders.</description>
    <label>Metadata Object</label>
    <nameField>
        <displayFormat>MD-{00000}</displayFormat>
        <label>Metadata Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>