force-app/main/default/objects/Metadata_Object__c/fields/Metadata_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Field_Name__c</fullName>
    <description>Metadata Field Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Metadata Field Name</inlineHelpText>
    <label>Metadata Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>