force-app/main/default/objects/Metadata_Object__c/fields/Metadata_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Rule_Name__c</fullName>
    <description>Metadata Rule Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Metadata Rule Name</inlineHelpText>
    <label>Metadata Rule Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>