force-app/main/default/objects/Metadata_Object__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <description>Metadata Type</description>
    <inlineHelpText>Metadata Type</inlineHelpText>
    <label>Metadata Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ValidationRule</fullName>
            </value>
            <value>
                <fullName>WorkflowRule</fullName>
            </value>
            <value>
                <fullName>ProcessBuilder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>