force-app/main/default/objects/Metadata_Object__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Object Name</inlineHelpText>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>